# UpBankingInTheTerminal

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
assets/: social-preview.html
scripts/: capture_social_preview.sh  install.sh  uninstall.sh
src/: client.rs  config.rs  main.rs  output.rs
src/commands/: accounts.rs  attachments.rs  categories.rs  config_cmd.rs  mod.rs  ping.rs  tags.rs  transactions.rs  uninstall.rs  update.rs  webhooks.rs
src/models/: accounts.rs  attachments.rs  categories.rs  common.rs  mod.rs  ping.rs  tags.rs  transactions.rs  webhooks.rs
