[package]
name = "upbanking-in-the-terminal"
version = "0.2.1"
edition = "2021"
description = "A secure CLI for the Up Banking API"
license = "MIT"
repository = "https://github.com/eucalyptus-viminalis/UpBankingInTheTerminal"

[[bin]]
name = "upbank"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tabled = "0.17"
dirs = "6"
toml = "0.8"
secrecy = { version = "0.10", features = ["serde"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
